check_errors5.txt
    Checking swe-edge-egress-tls v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\tls)
    Checking swe-edge-egress-breaker v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\breaker)
    Checking swe-edge-egress-auth v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\auth)
    Checking swe-edge-egress-cassette v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\cassette)
    Checking swe-edge-egress-rate v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\rate)
    Checking swe-edge-egress-http-transport v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\transport)
warning: unused import: `build_tls_layer`
  --> main\features\tls\tests\tls_config_int_test.rs:14:27
   |
14 | use swe_edge_egress_tls::{build_tls_layer, Error, TlsConfig};
   |                           ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no variant or associated item named `swe_default` found for enum `TlsConfig` in the current scope
   --> main\features\tls\tests\tls_config_int_test.rs:173:26
    |
173 |     let cfg = TlsConfig::swe_default().expect("swe_default must parse");
    |                          ^^^^^^^^^^^ variant or associated item not found in `TlsConfig`
    |
note: if you're trying to build a new `TlsConfig`, consider using `TlsConfig::from_config` which returns `Result<TlsConfig, swe_edge_egress_tls::Error>`
   --> main\features\tls\src\api\tls_config.rs:49:5
    |
 49 |     pub fn from_config(toml_text: &str) -> Result<Self, Error> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is an associated function `default` with a similar name
    |
173 -     let cfg = TlsConfig::swe_default().expect("swe_default must parse");
173 +     let cfg = TlsConfig::default().expect("swe_default must parse");
    |

For more information about this error, try `rustc --explain E0599`.
warning: `swe-edge-egress-tls` (test "tls_config_int_test") generated 1 warning
error: could not compile `swe-edge-egress-tls` (test "tls_config_int_test") due to 1 previous error; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
error[E0425]: cannot find value `b_cfg` in this scope
  --> main\features\rate\tests\builder_int_test.rs:26:10
   |
26 |         &b_cfg.tokens_per_second >= 1,
   |          ^^^^^ not found in this scope

error[E0425]: cannot find value `b_cfg` in this scope
  --> main\features\rate\tests\builder_int_test.rs:28:10
   |
28 |         &b_cfg.tokens_per_second
   |          ^^^^^ not found in this scope

error[E0425]: cannot find value `b_cfg` in this scope
  --> main\features\rate\tests\builder_int_test.rs:38:10
   |
38 |         &b_cfg.burst_capacity >= 1,
   |          ^^^^^ not found in this scope

error[E0425]: cannot find value `b_cfg` in this scope
  --> main\features\rate\tests\builder_int_test.rs:40:10
   |
40 |         &b_cfg.burst_capacity
   |          ^^^^^ not found in this scope

error[E0425]: cannot find value `b` in this scope
  --> main\features\breaker\tests\builder_e2e_test.rs:29:5
   |
29 |     b.build().expect("e2e with_config build must succeed");
   |     ^ not found in this scope

error[E0599]: no method named `build` found for struct `BreakerLayer` in the current scope
  --> main\features\breaker\tests\builder_e2e_test.rs:19:10
   |
17 |       let layer: BreakerLayer = build_breaker_layer(BreakerConfig::default())
   |  _______________________________-
18 | |         .expect("builder() must succeed")
19 | |         .build()
   | |         -^^^^^ method not found in `BreakerLayer`
   | |_________|
   |

error[E0277]: can't compare `&u32` with `{integer}`
  --> main\features\breaker\tests\builder_e2e_test.rs:28:5
   |
28 |     assert_eq!(&b_cfg.failure_threshold, 3);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `&u32 == {integer}`
   |
   = help: the trait `PartialEq<{integer}>` is not implemented for `&u32`
help: consider dereferencing here
  --> C:\Users\elvis\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\macros\mod.rs:46:22
   |
46 |                 if !(**left_val == *right_val) {
   |                      +

error[E0277]: can't compare `&Vec<u16>` with `Vec<u16>`
  --> main\features\breaker\tests\builder_e2e_test.rs:36:5
   |
36 |     assert_eq!(&b_cfg.failure_statuses, vec![500u16, 502, 503]);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `&Vec<u16> == Vec<u16>`
   |
   = help: the trait `PartialEq<Vec<u16>>` is not implemented for `&Vec<u16>`
help: consider dereferencing here
  --> C:\Users\elvis\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\macros\mod.rs:46:22
   |
46 |                 if !(**left_val == *right_val) {
   |                      +

warning: unused import: `build_auth_middleware`
  --> main\features\auth\tests\credential_resolver_int_test.rs:16:28
   |
16 | use swe_edge_egress_auth::{build_auth_middleware, AuthConfig, Error};
   |                            ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: can't compare `&u32` with `{integer}`
  --> main\features\breaker\tests\builder_e2e_test.rs:37:5
   |
37 |     assert_eq!(&b_cfg.reset_after_successes, 2);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `&u32 == {integer}`
   |
   = help: the trait `PartialEq<{integer}>` is not implemented for `&u32`
help: consider dereferencing here
  --> C:\Users\elvis\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\macros\mod.rs:46:22
   |
46 |                 if !(**left_val == *right_val) {
   |                      +

error[E0599]: no method named `build` found for struct `RateLayer` in the current scope
   --> main\features\rate\tests\builder_int_test.rs:101:10
    |
 99 |       let layer: RateLayer = build_rate_layer(RateConfig::default())
    |  ____________________________-
100 | |         .expect("baseline parses")
101 | |         .build()
    | |         -^^^^^ method not found in `RateLayer`
    | |_________|
    |

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\auth\tests\credential_resolver_int_test.rs:26:5
   |
26 |     ApplicationConfigBuilder::with_config(AuthConfig::Bearer {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\auth\tests\credential_resolver_int_test.rs:40:5
   |
40 |     ApplicationConfigBuilder::with_config(AuthConfig::Basic {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\auth\tests\credential_resolver_int_test.rs:58:15
   |
58 |     let err = ApplicationConfigBuilder::with_config(AuthConfig::Bearer {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

Some errors have detailed explanations: E0277, E0425, E0599.
For more information about an error, try `rustc --explain E0277`.
error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\auth\tests\credential_resolver_int_test.rs:78:15
   |
78 |     let err = ApplicationConfigBuilder::with_config(AuthConfig::Header {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\auth\tests\credential_resolver_int_test.rs:97:15
   |
97 |     let err = ApplicationConfigBuilder::with_config(AuthConfig::Basic {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
   --> main\features\auth\tests\credential_resolver_int_test.rs:117:15
    |
117 |     let err = ApplicationConfigBuilder::with_config(AuthConfig::Basic {
    |               ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error: could not compile `swe-edge-egress-breaker` (test "builder_e2e_test") due to 5 previous errors
error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
   --> main\features\auth\tests\credential_resolver_int_test.rs:144:18
    |
144 |     let result = ApplicationConfigBuilder::with_config(AuthConfig::Bearer {
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

For more information about this error, try `rustc --explain E0433`.
Some errors have detailed explanations: E0425, E0599.
For more information about an error, try `rustc --explain E0425`.
warning: `swe-edge-egress-auth` (test "credential_resolver_int_test") generated 1 warning
error: could not compile `swe-edge-egress-auth` (test "credential_resolver_int_test") due to 7 previous errors; 1 warning emitted
error: could not compile `swe-edge-egress-rate` (test "builder_int_test") due to 5 previous errors
